# hypixel_cli

./: Cargo.toml
src/: auction.rs  main.rs  util.rs
