[package]
name = "hypixel_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnbt = "2.3.1"
rayon = "1.5.3"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "1.0.139"}
serde_derive = "1.0.139"
serde_json = "1.0.82"
futures = "0.3.21"
tabled = {version="0.8.0", features = ["default", "color"]}
mc-legacy-formatting = "0.3.1"
flate2 = "1.0.24"
stringreader = "0.1.1"
base64 = "0.13.0"
quartz_nbt = {version = "0.2.6", features = ["serde"]}
nom = "7.1.1"